--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <module>notification-service</module>
     <module>integration-service</module>
     <module>reporting-service</module>
+    <module>admin-service</module>
   </modules>
 
   <parent>
