Update README with demo videos and remove Kubernetes references

--- a/admin-service/Dockerfile
+++ b/admin-service/Dockerfile
@@ -1,22 +1,12 @@
-FROM openjdk:17-jdk-slim
-
+FROM openjdk:17-slim as build
 WORKDIR /app
+COPY . .
+RUN ./mvnw clean package -DskipTests -pl admin-service -am
 
-COPY mvnw .
-COPY .mvn .mvn
-COPY pom.xml .
-
-RUN chmod +x mvnw
-
-RUN ./mvnw dependency:go-offline -B
-
-COPY src src
-
-RUN ./mvnw package -DskipTests
-
+FROM openjdk:17-slim
+WORKDIR /app
+COPY --from=build /app/admin-service/target/admin-service-1.0-SNAPSHOT.jar app.jar
 EXPOSE 8088
-
 HEALTHCHECK --interval=30s --timeout=3s --start-period=60s --retries=3 \
   CMD curl -f http://localhost:8088/actuator/health || exit 1
-
-ENTRYPOINT ["java", "-jar", "target/admin-service-1.0-SNAPSHOT.jar"] 
+ENTRYPOINT ["java", "-jar", "app.jar"] 
