--- a/admin-service/pom.xml
+++ b/admin-service/pom.xml
@@ -6,7 +6,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.example</groupId>
+        <groupId>com.ashehada.library</groupId>
         <artifactId>library-system</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
