--- a/config-server/Dockerfile
+++ b/config-server/Dockerfile
@@ -6,4 +6,6 @@ RUN ./mvnw clean package -DskipTests -pl config-server -am
 FROM openjdk:17-slim
 WORKDIR /app
 COPY --from=build /app/config-server/target/config-server-1.0-SNAPSHOT.jar app.jar
+COPY config-server/src/main/resources/config ./config
+EXPOSE 8888
 ENTRYPOINT ["java", "-jar", "app.jar"] 
